tests/ui/postgres/issue_30.stderr
error: "\'1" is not a valid Rust identifier
 --> $DIR/issue_30.rs:2:17
  |
2 |     let query = sqlx::query!("select 1 as \"'1\"");
  |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)
